# ManyRVData

./: .gitignore  .gitlab-ci.yml  .gitmodules  Bender.local  Bender.yml  Makefile  README.md  toolchain.mk
.github/workflows/: gitlab-ci.yml
cfg/: cachepool.hjson
config/: cachepool.hjson  cachepool.hjson.tmpl  cachepool_128.mk  cachepool_512.mk  cachepool_fpu_128.mk  cachepool_fpu_256.mk  cachepool_fpu_512.mk  config.mk
hardware/bootrom/: bootdata.cc  bootdata_bootrom.cc  bootrom.S  bootrom.dump  bootrom.elf  bootrom.sv
hardware/cachepool_peripheral/: Makefile  cachepool_peripheral.sv  cachepool_peripheral_reg.hjson  cachepool_peripheral_reg_pkg.sv  cachepool_peripheral_reg_top.sv
hardware/src/: cachepool_cc.sv  cachepool_cluster.sv  cachepool_cluster_barrier.sv  cachepool_cluster_simple.sv  cachepool_group.sv  cachepool_pkg.sv  cachepool_tile.sv  cachepool_tile_barrier.sv  cachepool_tile_simple.sv  reqrsp_xbar.sv  spatz_cache_amo.sv  tcdm_cache_interco.sv  tcdm_id_remapper.sv
hardware/tb/: cachepool_cluster_wrapper.sv  tb_cachepool.sv  testharness.sv
hardware/tb/dram_config/: DDR4-1866.json  am_ddr4.json
sim/: .gitignore  sim.mk
sim/scripts/: vsim_cluster.tcl  vsim_core.tcl  vsim_group.tcl  vsim_tile.tcl  vsim_wave.tcl  vsim_wave_single_tile.tcl
software/: CMakeLists.txt
software/cmake/: toolchain-llvm.cmake
software/scripts/timeline/: data_gemm.csv  timeline.py
software/snRuntime/: CMakeLists.txt
software/snRuntime/include/: cachepool_peripheral.h  l1cache.h  snrt.h
software/snRuntime/link/: common.ld.in
software/snRuntime/src/: l1cache.c  start.S  team.c
software/tests/: CMakeLists.txt
software/tests/benchmark/: benchmark.c  mcs_lock.c  spin_lock.c
software/tests/byte-enable/: main.c
software/tests/cache-mix-pressure/: main.c
software/tests/cache-mix-smoke/: main.c
software/tests/cache-test-scalar/: main.c
software/tests/cache-test-vector/: main.c
software/tests/dp-fmatmul-4x4vl/: main.c
software/tests/fdotp-32b/: main.c
software/tests/fdotp-32b/data/: data_1024.h  data_32768.h  data_65536.h  data_8192.h
software/tests/fdotp-32b/kernel/: fdotp.c
software/tests/fdotp-32b/script/: dotp.json  gen_data.py
software/tests/fft-32b/: main.c
software/tests/fft-32b/data/: data_1024_16.h  data_256_4.h
software/tests/fft-32b/kernel/: fft.c  fft.h
software/tests/fft-32b/script/: fft.json  gen_data.py
software/tests/fmatmul-32b/: main.c
software/tests/fmatmul-32b/data/: data_32_32_32.h  data_64_64_64.h
software/tests/fmatmul-32b/kernel/: fmatmul.c  fmatmul.h
software/tests/gemv/: main.c
software/tests/gemv-col/: main.c
software/tests/gemv-col/data/: data_128_128_64.h  data_128_64_64.h  data_512_32_32.h  data_512_32_64.h
software/tests/gemv-col/kernel/: gemv.c  gemv.h
software/tests/gemv-col/script/: gemv.json
software/tests/gemv-opt/: main.c
software/tests/gemv-opt/data/: data_1024_128_32.h  data_512_128_32.h
software/tests/gemv-opt/kernel/: gemv.c  gemv.h
software/tests/gemv-opt/script/: gemv.json  gen_data.py
software/tests/gemv/data/: data_1024_128_32.h  data_256_128_32.h  data_512_128_32.h
software/tests/gemv/script/: gemv.json
software/tests/idotp-32b/: main.c
software/tests/idotp-32b/data/: data_1024.h  data_32768.h  data_8192.h  layer.h
software/tests/idotp-32b/kernel/: idotp.c  idotp.h
software/tests/idotp-32b/script/: dotp.json  gen_data.py
software/tests/include/: benchmark.h  mcs_lock.h  random.h  spin_lock.h
software/tests/load-store/: main.c
software/tests/load-store/data/: data_16.h  data_gemm.h
software/tests/load-store/script/: data.json  gen_data.py
software/tests/mcs-lock/: main.c
software/tests/mcs-lock/kernel/: printf_lock.c  printf_lock.h
software/tests/multi_producer_single_consumer_double_linked_list/: main.c
software/tests/multi_producer_single_consumer_double_linked_list/data/: data_1_1350_10.h  data_1_1350_100.h  data_1_1350_300.h  data_1_2044_100.h  data_256_16.h  data_64_8.h  rlc_flowchart
software/tests/multi_producer_single_consumer_double_linked_list/kernel/: data_move_vec.c  data_move_vec.h  debug.c  debug.h  llist.c  llist.h  mcs_lock.c  mcs_lock.h  mm.c  mm.h  printf_lock.c  printf_lock.h  rlc.c  rlc.h
software/tests/multi_producer_single_consumer_double_linked_list/script/: flowchart.py  generate_pdcp_pkg.py  pdcp_pkg.json
software/tests/sp-fdotp/: main.c
software/tests/sp-fdotp/data/: data_1024.h  data_8192.h
software/tests/sp-fdotp/kernel/: fdotp.c  fdotp.h
software/tests/sp-fdotp/script/: dotp.json  gen_data.py
software/tests/sp-fmatmul/: main.c
software/tests/sp-fmatmul/data/: data_128_128_128.h
software/tests/spin-lock/: main.c
util/auto-benchmark/: .gitignore  Makefile  check-ci.py  configs-ci.sh  configs.sh  run_all.sh  run_ci.sh  write_results.py
util/lint/script/: lint.tcl
util/scripts/: gen_spatz_cfg.py  generate_bootdata.py  generate_bootrom.py
